--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "mongodb": "^3.3.5",
+    "mongoose": "^5.7.14",
     "nodemon": "^2.0.1",
     "pug": "^2.0.4"
   }
