--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/BenL867/Final-Project/tree/draft-3.git"
+    "url": "https://github.com/BenL867ReginaSkate.git"
   },
   "keywords": [],
   "author": "",
