--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.6",
     "mongodb": "^3.3.5",
     "mongoose": "^5.7.14",
     "nodemon": "^2.0.1",
