--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
+    "handlebars": "^4.5.3",
     "mongodb": "^3.3.5",
     "mongoose": "^5.7.14",
     "nodemon": "^2.0.1",
