--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-MONGO_CONNECT_URI=mongodb+srv://dbUser:dbPassword@cluster0-reqdz.mongodb.net/test?retryWrites=true&w=majority
+MONGO_CONNECT_URI=mongodb+srv://cluster0-reqdz.mongodb.net/test?retryWrites=true&w=majority
 PORT=3000
+
+
